[package]
name = "cln-feeder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20", features = [ "full"] }
clap = { version = "3.2", features = ["derive"]}
log = "0.4"
tonic = "0.8.0"
cln-rpc = {version = "0.1.0", git = "https://github.com/HaosGames/clightning", branch = "setchannel"}
env_logger = "0.9.0"
sqlx = {version = "0.6.1", features = ["runtime-tokio-native-tls", "sqlite"]}
anyhow = "1.0"
chrono = "0.4"
